# OpenFCSTv03

./: README.md  README.rst  openFCST_install  testBranch
src/: CMakeLists.txt  LICENSE  README  fcst_env.sh.in  fcst_run_nohup.sh  run_tests  tests.cmake
src/cmake/Modules/: FindDAKOTA.cmake  FindMETIS.cmake  FindNumPy.cmake  FindP4EST.cmake  FindPETSC.cmake  FindSciPy.cmake  FindSphinx.cmake  FindTRILINOS.cmake
src/cmake/macros/: macro_ErrorMessages.cmake  macro_reset_cmake_required.cmake
src/contrib/: CMakeLists.txt
src/contrib/ALGLIB/: CMakeLists.txt
src/contrib/COLDAE/: CMakeLists.txt
src/contrib/Metis/: CMakeLists.txt  README  configure_Metis
src/contrib/PETSc/: CMakeLists.txt  README
src/contrib/ParaView/: CMakeLists.txt
src/contrib/Trilinos/: CMakeLists.txt
src/contrib/cpptest/: CMakeLists.txt
src/contrib/deal.II/: CMakeLists.txt  README
src/contrib/p4est/: CMakeLists.txt  configure_p4est
src/contrib/sqlite/: CMakeLists.txt
src/databases/: main_db
src/doc/: Doxyfile  LICENSE  authors.html  index.html
src/doc/RefGuide/: User_Guide.tex  simplemargins.sty
src/doc/RefGuide/LaTeX_files/: OpenFCST_src_structure_developers.tex  OpenFCST_structure.tex  appendix.tex  bibliography.tex  coding_guidelines.tex  development_process.tex  getting_started.tex  installation.tex  introduction.tex  optimization.tex  post_processor.tex  pre_processor.tex  running_openFCST.tex  setting_up_development.tex  testing_suite.tex  useful_programming_tips.tex
src/doc/articles/openFCST/: Secanell et al_OpenFCST.tex  bibliography.bib  elsart-harv.bst
src/doc/css/: coin-slider.css  contact.css  style.css
src/doc/deprecated/: customdoxygen.css  fcst_stylesheet.css  index.html
src/doc/dot/: parameter_dependency.dot
src/doc/images/: application.eps
src/examples/: Makefile  conf.py  dependencies.sh  getting_started.rst  index.rst  make.bat
src/examples/Pemfc/: readme.rst
src/examples/Pemfc/agglomerate/: data.prm  main.prm  readme.rst
src/examples/Pemfc/analysis/: data_app_pemfc.prm  main_app_pemfc.prm
src/examples/Pemfc/graded_electrode/: data.prm  main.prm
src/examples/Pemfc/homogeneous/: data.prm  main.prm  readme.rst
src/examples/Pemfc/polydisperse_agglomerate/: data.prm  main.prm
src/examples/Pemfc/template/: data_app_pemfc_default.prm  main_app_pemfc_default.prm  opt_data_app_pemfc_default.prm
src/examples/PemfcNIThermal/: readme.rst
src/examples/PemfcNIThermal/Bhaiya_EA14_Nonisothermal/: readme.rst
src/examples/PemfcNIThermal/analysis/: data.prm  main.prm
src/examples/PemfcNIThermal/polarization_curve/: data.prm  main.prm  readme.rst  run.sh
src/examples/PemfcNIThermal/template/: data.prm  main.prm
src/examples/PemfcTPSaturation/: readme.rst
src/examples/PemfcTPSaturation/polarization_curve/: data.prm  main.prm  readme.rst
src/examples/PemfcTPSaturation/template/: data.prm  main.prm
src/examples/anode/: readme.rst
src/examples/anode/analysis/: data.prm  main.prm
src/examples/anode/polarization_curve/: data.prm  main.prm
src/examples/anode/template/: data.prm  default_ACL.prm  default_GDL.prm  default_MPL.prm  main.prm
src/examples/cathode/: readme.rst
src/examples/cathode/Secanell_EA07_MultiVariable_Optimization_PEMFC_Cathodes_Agglomerate_Model/: readme.rst
src/examples/cathode/Secanell_EA07_Numerical_Optimization_PEMFC_Cathode_Electrodes/: readme.rst
src/examples/cathode/analysis/: main.prm
src/examples/cathode/optimization/: data.prm  main.prm  opt.prm
src/examples/cathode/parallel/: ._mesh_to_be_transfered.msh  .transfer_solution.FEVector  data.prm
src/examples/cathode/polarization_curve/: main.prm  readme.rst
src/examples/cathode/template/: README.txt  data.prm  main.prm  opt.prm
src/examples/how_to/: how_to.rst
src/examples/microscale/: readme.rst
src/examples/microscale/3D_Diffusion/: data.prm  main.prm
src/examples/microscale/Diffusion_with_reaction/: data.prm  main.prm  my_test.vtk
src/examples/microscale/template/: data.prm  main.prm
src/examples/microscale/test/: data.prm  main.prm
src/examples/ohmic/: readme.rst
src/examples/ohmic/analysis/: data.prm
src/examples/ohmic/template/: data.prm  main.prm
src/fcst/: CMakeLists.txt
src/fcst/GUI/: CMakeLists.txt  application.qrc
src/fcst/GUI/contrib/: README  browse_lineedit.h  parameter_delegate.cpp  parameter_delegate.h  xml_parameter_reader.cpp  xml_parameter_reader.h  xml_parameter_writer.h
src/fcst/GUI/include/: main_window.h  settings_window.h
src/fcst/GUI/source/: main.cc  main_window.cc  settings_window.cc
src/fcst/cmake/: OpenFCSTConfig.cmake.in  OpenFCSTConfigVersion.cmake.in
src/fcst/include/: CMakeLists.txt
src/fcst/include/application_core/: application_base.h  application_data.h  application_wrapper.h  block_matrix_application.h  dof_application.h  event.h  fcst_variables.h  fe_vectors.h  initial_and_boundary_data.h  matrix_block.h  mesh_loop_info_objects.h  optimization_block_matrix_application.h  system_management.h
src/fcst/include/applications/: app_cathode.h  app_diffusion.h  app_ohmic.h  app_pemfc.h  app_pemfc_nonisothermal.h  app_pemfc_twophase_saturation.h  app_read_mesh.h  app_step3.h  app_step8.h  app_test.h  app_thermal_test.h
src/fcst/include/contribs/: DAE_solver.h  DAE_wrapper.h  dakota_application.h  dakota_direct_interface.h  dakota_interface.h  experimental_data.h
src/fcst/include/equations/: compressible_multi_component_KG_equations_coupled.h  electron_transport_equation.h  equation_auxiliaries.h  equation_base.h  ficks_transport_equation.h  (+10 more)
src/fcst/source/: CMakeLists.txt  main.cc
src/fcst/unit_tests/: CMakeLists.txt
src/my_data/: readme.rst
src/test/: CTestConfig.cmake  CTestCustom.cmake  CTestTestfile.cmake  README.txt  csvPoleCurveCompare.py  simpleCompare.py  testPy.py  test_comparison.py  test_function.sh  test_function_location.sh  test_function_optimization.sh  test_function_polarization.sh  vtkLocationCompare.py
src/test/test_cases/: app_diffusion_2D.sh  app_diffusion_3D.sh  app_diffusion_3D_parallel.sh
src/test/unit_tests/: main_unit_tests.prm  unit_tests_case.sh
(+416 files in other folders)
